--- a/.github/workflows/Deploy_Surge.yml
+++ b/.github/workflows/Deploy_Surge.yml
@@ -12,13 +12,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        # Install NodeJS
       - name: Setup Node
         uses: actions/setup-node@v2-beta
         with:
-          node-version: '12'
+          node-version: 12
+      
+      # Install Yarn
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install # will run `yarn install` command
+      #Build react app with yarn
+      - name: Build React App
+        run: yarn build
+        # Install Surge
       - name: Setup Surge
         run: npm install --global surge
+      #Deploy Surge
       - name: Execute Deployment with Surge
-        run: surge ./ reactapp001_bia.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./build reactapp001_bia.surge.sh --token ${{ secrets.SURGE_TOKEN }}
 
 ...
